Added slider that filters based on date.

--- a/map practice 4 weather/index.html
+++ b/map practice 4 weather/index.html
@@ -16,6 +16,12 @@
         <svg viewBox="0 0 975 610"></svg>
     </div>
 
+    <div>
+        <label for="daySlider">Date:</label>
+        <input type="range" id="daySlider" min="0" max="100" step="1" value="0">
+        <span id="dayDisplay">Loading...</span>
+    </div>
+
     <div id="tooltip" style="display:none"></div> 
     <!-- Load D3.js -->
     <script src="https://d3js.org/d3.v7.min.js"></script>
