--- a/map practice 4 weather/index.html
+++ b/map practice 4 weather/index.html
@@ -12,16 +12,24 @@
     Trying to make a map of the USA with states
     and then load weather points on it 
 
-    <div id="vis">
-        <svg viewBox="0 0 975 610"></svg>
-    </div>
-
     <div>
         <label for="daySlider">Date:</label>
         <input type="range" id="daySlider" min="0" max="100" step="1" value="0">
         <span id="dayDisplay">Loading...</span>
     </div>
 
+    <div id="state-gradients">
+        <label> <input type="checkbox" id="tempGradient"> Average Temperature </label>
+        <label> <input type="checkbox" id="windGradient"> Average Daily Wind Speed </label>
+    </div>
+
+    Variable: <select id="dropdown"></select>
+  
+    <div id="vis">
+        <svg viewBox="0 0 975 610"></svg>
+    </div>
+
+  
     <div id="tooltip" style="display:none"></div> 
     <!-- Load D3.js -->
     <script src="https://d3js.org/d3.v7.min.js"></script>
