Added gradients for precipitation and snowfall as well.

--- a/map practice 4 weather/index.html
+++ b/map practice 4 weather/index.html
@@ -21,6 +21,8 @@
     <div id="state-gradients">
         <label> <input type="checkbox" id="tempGradient"> Average Temperature </label>
         <label> <input type="checkbox" id="windGradient"> Average Daily Wind Speed </label>
+        <label> <input type="checkbox" id="precipGradient"> Precipitation </label>
+        <label> <input type="checkbox" id="snowGradient"> Snowfall </label>
     </div>
 
     Variable: <select id="dropdown"></select>
