Fixed gradients, removed dropdown box, fixed color scales, cleaned code

--- a/map practice 4 weather/index.html
+++ b/map practice 4 weather/index.html
@@ -19,16 +19,19 @@
     </div>
 
     <div id="state-gradients">
-        <label> <input type="checkbox" id="tempGradient"> Average Temperature </label>
+        <label> <input type="checkbox" id="tempGradient" checked> Average Temperature </label>
         <label> <input type="checkbox" id="windGradient"> Average Daily Wind Speed </label>
         <label> <input type="checkbox" id="precipGradient"> Precipitation </label>
         <label> <input type="checkbox" id="snowGradient"> Snowfall </label>
+        <label> <input type="checkbox" id="depthGradient"> Snow Depth</label>
     </div>
-
-    Variable: <select id="dropdown"></select>
   
     <div id="vis">
         <svg viewBox="0 0 975 610"></svg>
+    </div>
+
+    <div id = "line-vis" > 
+        
     </div>
 
   
