--- a/map practice 4 weather/index.html
+++ b/map practice 4 weather/index.html
@@ -8,26 +8,32 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
-    <h1> map practice 4 weather d3.js hopefully </h1>
-    Trying to make a map of the USA with states
-    and then load weather points on it 
-
-    <div>
-        <label for="daySlider">Date:</label>
-        <input type="range" id="daySlider" min="0" max="100" step="1" value="0">
-        <span id="dayDisplay">Loading...</span>
-    </div>
-
-    <div id="state-gradients">
-        <label> <input type="checkbox" id="tempGradient" checked> Average Temperature </label>
-        <label> <input type="checkbox" id="windGradient"> Average Daily Wind Speed </label>
-        <label> <input type="checkbox" id="precipGradient"> Precipitation </label>
-        <label> <input type="checkbox" id="snowGradient"> Snowfall </label>
-        <label> <input type="checkbox" id="depthGradient"> Snow Depth</label>
+    <h1> Weather Map of the USA (2017)</h1>
+    
+    <div id = "gradients-container"><h2>Gradients</h2>
+        <p id="state-gradients">
+            <label> <input type="checkbox" id="tempGradient" checked = "checked"> Average Temperature </label>
+            <label> <input type="checkbox" id="windGradient"> Average Daily Wind Speed </label>
+            <label> <input type="checkbox" id="precipGradient"> Precipitation </label>
+            <label> <input type="checkbox" id="snowGradient"> Snowfall </label>
+        </p>
     </div>
   
     <div id="vis">
         <svg viewBox="0 0 975 610"></svg>
+    </div>
+    <div id="main-container">
+        <p id="slider-container">
+        <label for="daySlider">Date:</label>
+        <input type="range" id="daySlider" min="0" max="100" step="1" value="0">
+        <span id="dayDisplay">Loading...</span>
+        </p>
+        <p id = "control-pannel">
+            <button id="resume">Resume</button>
+            <button id="pause">Pause</button>
+            <button id="speedup" class = "rotatedRight">Increase Speed</button>
+            <button id="slowdown" class = "rotatedLeft">Decrease Speed</button>
+        </p>
     </div>
 
     <div id = "line-vis" > 
